# huffman

./: .gitignore  CMakeLists.txt  Readme.md  huffman_testing.cpp  main.cpp
lib/: huffman_decoder.cpp  huffman_decoder.h  huffman_encoder.cpp  huffman_encoder.h  huffman_library.h
lib/res/: buffer.cpp  consts.h  symbol_code.cpp
src/: huffman_testing.cpp  main.cpp
src/gtest/: gtest-all.cc  gtest.h
src/lib/: huffman_decoder.cpp  huffman_encoder.h  huffman_library.h
src/lib/res/: buffer.cpp
